angular 2 wizard with electron setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,19 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+  <form-wizard>
+  <wizard-step [title]="'Step1'" (onNext)="onStep1Next($event)">
+    <h1>Step1</h1>   
+  </wizard-step>
+  <wizard-step [title]="'Step2'" (onNext)="onStep2Next($event)">
+    <h1>Step2</h1>
+  </wizard-step>
+  <wizard-step [title]="'Step3'" (onNext)="onStep3Next($event)">
+    <h1>Step3</h1>
+  </wizard-step>
+  <wizard-step [title]="'Step4'" (onComplete)="onComplete($event)">
+    
+  </wizard-step>
+  <wizard-step [title]="'Step5'" (onComplete)="onComplete($event)">
+    
+  </wizard-step>
+</form-wizard>
+</div>
